tests/pos/i11075/B_2.scala
trait B extends A {
  inline def a: Int = 0
}
