tests/neg/t12186b/A.scala
package object p extends p.U {
  def b: Int = 0
  trait Y
}
